# lab04-solid-sierra

./: .gitignore  CMakeLists.txt  DigitalGame.cpp  DigitalGame.h  Game.h  InventoryManager.cpp  InventoryManager.h  MainGame.cpp  Notification.h  PhysicalGame.cpp  PhysicalGame.h  Price.cpp  Price.h  README.md  Receipt.cpp  Receipt.h  ReceiptEmail.cpp  ReceiptEmail.h  ReceiptMail.cpp  ReceiptMail.h  ReceiptWeb.cpp  ReceiptWeb.h  StreamingGame.cpp  StreamingGame.h
src/: CMakeLists.txt  DigitalGame.cpp  DigitalGame.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  IReplaceable.cpp  IReplaceable.h  IShippable.cpp  IShippable.h  InventoryManager.h  MainGame.cpp  Notification.cpp  Notification.h  NotificationEmail.cpp  NotificationEmail.h  NotificationWeb.cpp  NotificationWeb.h  PhysicalGame.cpp  PhysicalGame.h  Price.cpp  Price.h  README.md  Receipt.cpp  Receipt.h  ReceiptEmail.cpp  ReceiptEmail.h  ReceiptMail.cpp  ReceiptMail.h  ReceiptWeb.cpp  ReceiptWeb.h  StreamingGame.cpp  StreamingGame.h
src/DigitalGame/: DigitalGame.cpp  DigitalGame.h
tst/: PhysicalGameTest.cpp  main.cpp
