cmake_minimum_required(VERSION 3.14)
project(lab04-solid)

set(CMAKE_CXX_STANDARD 17)
add_executable(game Game.h Game.cpp MainGame.cpp PhysicalGame.cpp PhysicalGame.h DigitalGame.cpp DigitalGame.h StreamingGame.cpp StreamingGame.h IShippable.cpp IShippable.h InventoryManager.cpp InventoryManager.h Price.cpp Price.h Receipt.cpp Receipt.h ReceiptEmail.cpp ReceiptEmail.h ReceiptMail.cpp ReceiptMail.h ReceiptWeb.cpp ReceiptWeb.h Notification.cpp Notification.h NotificationEmail.cpp NotificationEmail.h NotificationWeb.cpp NotificationWeb.h IReplaceable.cpp IReplaceable.h)